--- a/firebase.json
+++ b/firebase.json
@@ -4,7 +4,7 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": "dist/pollachi-trash",
+    "public": "dist\\pollachi-trash",
     "ignore": [
       "firebase.json",
       "**/.*",
